WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221207
[LFC][Integration] Fix editing/execCommand/primitive-value.html
https://bugs.webkit.org/show_bug.cgi?id=221207
Summary
[LFC][Integration] Fix editing/execCommand/primitive-value.html
Antti Koivisto
Reported
2021-02-01 07:31:50 PST
Need to update layout
Attachments
patch
(1.48 KB, patch)
2021-02-01 07:35 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-02-01 07:35:04 PST
Created
attachment 418871
[details]
patch
EWS
Comment 2
2021-02-01 08:45:10 PST
Committed
r272143
: <
https://trac.webkit.org/changeset/272143
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418871
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-01 08:46:16 PST
<
rdar://problem/73830622
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug