[LFC][Integration] Fix editing/execCommand/primitive-value.html https://bugs.webkit.org/show_bug.cgi?id=221207

Reviewed by Zalan Bujtas.

* editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplaceSelectionCommand::removeUnrenderedTextNodesAtEnds):

This needs to update the layout after node removal as that can invalidate the existing one.


Canonical link: https://commits.webkit.org/233533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272143 268f45cc-cd09-0410-ab3c-d52691b4dbfc